--- a/composer.json
+++ b/composer.json
@@ -19,16 +19,23 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.0",
         "laravelcollective/html": "^6.4",
+        "maatwebsite/excel": "^3.1",
+        "patrickschur/language-detection": "^5.3",
+        "php-ffmpeg/php-ffmpeg": "^1.2",
         "pusher/pusher-php-server": "^7.2",
         "realrashid/sweet-alert": "^7.1",
+        "setasign/fpdf": "^1.8",
+        "setasign/fpdi": "^2.6",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "socialiteproviders/kakao": "^4.2",
         "socialiteproviders/manager": "^4.4",
+        "stichoza/google-translate-php": "*",
         "symfony/http-client": "^6.1",
         "symfony/mailgun-mailer": "^6.1",
         "symfony/postmark-mailer": "^6.1",
         "tinymce/tinymce": "^6.7",
-        "tymon/jwt-auth": "^2.0"
+        "tymon/jwt-auth": "^2.0",
+        "zaloplatform/zalo-php-sdk": "^4.0"
     },
     "require-dev": {
         "spatie/laravel-ignition": "^2.0",
