--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,11 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.0",
         "laravelcollective/html": "^6.4",
+        "maatwebsite/excel": "^3.1",
         "pusher/pusher-php-server": "^7.2",
         "realrashid/sweet-alert": "^7.1",
+        "setasign/fpdf": "^1.8",
+        "setasign/fpdi": "^2.6",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "socialiteproviders/kakao": "^4.2",
         "socialiteproviders/manager": "^4.4",
