--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,14 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.0",
         "laravelcollective/html": "^6.4",
+        "maatwebsite/excel": "^3.1",
+        "patrickschur/language-detection": "^5.3",
         "pusher/pusher-php-server": "^7.2",
         "realrashid/sweet-alert": "^7.1",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "socialiteproviders/kakao": "^4.2",
         "socialiteproviders/manager": "^4.4",
+        "stichoza/google-translate-php": "^5.1",
         "symfony/http-client": "^6.1",
         "symfony/mailgun-mailer": "^6.1",
         "symfony/postmark-mailer": "^6.1",
