--- a/.gitignore
+++ b/.gitignore
@@ -152,4 +152,6 @@ fabric.properties
 # End of https://www.toptal.com/developers/gitignore/api/laravel,phpstorm
 #
 composer.lock
+composer.json
 package-lock.json
+public/js/bootstrap.min.js
