--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "bensampo/laravel-enum": "^6.7",
         "devmarketer/easynav": "^1.0",
         "guzzlehttp/guzzle": "^7.8",
+        "jenssegers/agent": "^2.6",
         "kalnoy/nestedset": "^6.0",
         "laravel/framework": "^10.0",
         "laravel/legacy-factories": "^1.0",
