--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "symfony/mailgun-mailer": "^6.1",
         "symfony/postmark-mailer": "^6.1",
         "tinymce/tinymce": "^6.7",
-        "tymon/jwt-auth": "^2.0"
+        "tymon/jwt-auth": "^2.0",
+      "ext-curl": "*"
     },
     "require-dev": {
         "spatie/laravel-ignition": "^2.0",
