--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ext-curl": "*",
+        "barryvdh/laravel-dompdf": "^2.2",
         "bensampo/laravel-enum": "^6.7",
         "devmarketer/easynav": "^1.0",
         "guzzlehttp/guzzle": "^7.8",
@@ -32,8 +34,7 @@
         "symfony/mailgun-mailer": "^6.1",
         "symfony/postmark-mailer": "^6.1",
         "tinymce/tinymce": "^6.7",
-        "tymon/jwt-auth": "^2.0",
-      "ext-curl": "*"
+        "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
         "spatie/laravel-ignition": "^2.0",
