--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.1",
         "ext-curl": "*",
+        "aws/aws-sdk-php": "^3.315",
         "barryvdh/laravel-dompdf": "^2.2",
         "bensampo/laravel-enum": "^6.7",
         "devmarketer/easynav": "^1.0",
