--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "laravelcollective/html": "^6.4",
         "maatwebsite/excel": "^3.1",
         "patrickschur/language-detection": "^5.3",
+        "phpoffice/phpspreadsheet": "^1.29",
         "pusher/pusher-php-server": "^7.2",
         "realrashid/sweet-alert": "^7.1",
         "simplesoftwareio/simple-qrcode": "^4.2",
