--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "barryvdh/laravel-dompdf": "^2.2",
         "bensampo/laravel-enum": "^6.7",
         "devmarketer/easynav": "^1.0",
+        "google/apiclient": "^2.17",
         "guzzlehttp/guzzle": "^7.8",
         "jenssegers/agent": "^2.6",
         "kalnoy/nestedset": "^6.0",
