--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,8 @@
         "phpoffice/phpspreadsheet": "^1.29",
         "pusher/pusher-php-server": "^7.2",
         "realrashid/sweet-alert": "^7.1",
+        "setasign/fpdf": "^1.8",
+        "setasign/fpdi": "^2.6",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "socialiteproviders/kakao": "^4.2",
         "socialiteproviders/manager": "^4.4",
